--- a/src/app/coursetrain/coursetrain.component.html
+++ b/src/app/coursetrain/coursetrain.component.html
@@ -1,6 +1,10 @@
 <div class="grid container h-screen">
   <div class="col-12">
-    <div class="flex justify-content-center">
+    <div><app-menu [name]="name"></app-menu></div>
+  </div> 
+
+  <div class="col-12">
+    <div class="text-center font-bold text-white center">
       <h2>{{ this.state.header }}</h2>
     </div>
   </div>
