--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,8 +1,12 @@
 <div class="grid container h-screen">
   <div class="col-12">
-    <div class="flex justify-content-center">
-      <h2>คอร์สออกกำลังกาย</h2>
-    </div>
+    <div><app-menu [name]="name"></app-menu></div>
+  </div>
+
+  <div class="col-12">
+      <div class="text-center font-bold text-white center">
+        <h2>คอร์สออกกำลังกาย</h2>
+      </div>
   </div>
 
   <div class="col-12">
