--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -147,7 +147,7 @@
         <p-divider type="solid" />
 
         <div class="flex justify-content-center pt-5">
-          <h2 class="font-color">ลดไข้มัน</h2>
+          <h2 class="font-color">ลดไขมัน</h2>
         </div>
 
         <div class="grid">
@@ -167,7 +167,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',2,'assets/program/Picture2.jpg')"
+                      (click)="goPageCoursetrain('ลดไขมัน',2,'assets/program/Picture2.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -191,7 +191,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',4,'assets/program/Picture4.jpg')"
+                      (click)="goPageCoursetrain('ลดไขมัน',4,'assets/program/Picture4.jpg')"
                       />
                     </div>
                   </ng-template>
@@ -215,7 +215,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',6,'assets/program/Picture6.jpg')"
+                      (click)="goPageCoursetrain('ลดไขมัน',6,'assets/program/Picture6.jpg')"
 
                       />
                     </div>
@@ -228,7 +228,7 @@
             <div class="text-center p-4 border-round-top-3xl">
               <div class="card flex justify-content-center">
                 <p-card
-                  subheader="Premium Cardio Interval Training"
+                  subheader="Cardio Interval Training"
                   [style]="{ width: '150px' }"
                 >
                   <ng-template pTemplate="header">
@@ -240,7 +240,7 @@
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
                       <p-button label="สมัคร" styleClass="button-training"
-                      (click)="goPageCoursetrain('ลดไข้มัน',11,'assets/program/Picture11.jpg')"
+                      (click)="goPageCoursetrain('ลดไขมัน',11,'assets/program/Picture11.jpg')"
                       />
                     </div>
                   </ng-template>
