recfood info + menu full

--- a/src/app/calfood/calfood.component.html
+++ b/src/app/calfood/calfood.component.html
@@ -1,4 +1,9 @@
 <div class="grid container h-screen">
+
+  <div class="col-12">
+    <div><app-menu [name]="name"></app-menu></div>
+  </div>
+  
   <div class="content item-center center text-white">
     <h2>คำนวณสารอาหาร</h2>
   </div>
