--- a/src/app/food-information/food-information.component.html
+++ b/src/app/food-information/food-information.component.html
@@ -35,7 +35,7 @@
               <div class="button-card card">
                 <p-button label="กลับหน้าหลัก" [text]="true" [raised]="true" severity="secondary" (click)="gohome()"
                   class="custom-button-white" />
-                <p-button label="ทดลอง" [text]="true" [raised]="true" class="custom-button-red" />
+                <p-button label="ทดลอง" [text]="true" [raised]="true" class="custom-button-red" (click)="gorecfood()" />
               </div>
             </p-card>
           </div>
