--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,6 +49,7 @@
               [text]="true"
               [raised]="true"
               class="custom-button-red"
+              (click)="gorecfood()"
             />
           </div>
         </p-card>
