--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -19,7 +19,7 @@
                 <span class="font-medium ml-2">หน้าหลัก</span>
               </a>
             </li>
-            <li (click)="goToPage('menu')">
+            <li (click)="goToPage('recfood')">
                 <a pRipple
                   class="flex align-items-center cursor-pointer p-3 border-round transition-duration-150 p-ripple">
                   <span class="pi pi-shopping-cart material-symbols-outlined font-size-32"></span>
