--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,4 +1,9 @@
 <div class="grid container h-screen">
+
+    <div class="col-12">
+        <div><app-menu [name]="name"></app-menu></div>
+      </div>
+
     <div class="content item-center center text-white">
         <h2>รายการสินค้า</h2>
     </div>
@@ -38,7 +43,6 @@
                 </div>
             
                 <div class="buttons">
-                <button class="cart-button">ลงตะกร้า</button>
                 <button class="buy-now-button">ซื้อสินค้า</button>
                 </div>
             </div>      
@@ -48,65 +52,40 @@
 
         <div class="item-center content">
             <div class="content text-center">
-                <h2 style="color: grey;">จุดเด่นของสินค้า</h2>
-            </div>
+                <h2 style="color: grey;">จุดเด่นของสินค้า</h2>  
+            </div> 
         </div>
+        <div class="text-left gap-2 mt-1">
+            <div class="flex-container7">
+              เพิ่มกล้ามเนื้อ
+              <span class="text-right3">{{ "ดี" }}</span>
+            </div>
+            <div class="flex-container8">
+              เพิ่มแรง
+              <span class="text-right3">{{ "ดี" }}</span>
+            </div>
+            <div class="flex-container8">
+                ฟื้นฟูกล้ามเนื้อ
+                <span class="text-right3">{{ "ดี" }}</span>
+            </div>
+            <div class="flex-container8">
+                ความเร็วในการดูดซึม
+                <span class="text-right3">{{ "ดี" }}</span>
+              </div>
+          </div>
 
         <hr class="solid">     
 
         <div class="item-center content">
             <div class="content text-center">
                 <h2>Optimum Nutrition Whey Protein Gold</h2>
+                
             </div>
         </div>
 
         <hr class="solid">  
 
-        <div class="item-center content">
-            <div class="content text-center">
-                <h2 style="color: grey;">ควรใช้ร่วมกัน</h2>
-            </div>
-        </div>
-
-        <p-splitter [panelSizes]="[33, 33, 33]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
-            <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
-                    <div class="tile-content">
-                        <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
-                            <img src="assets/PNG/dymatize.png" class="tile-image" />
-                        </div>
-                        <p class="tile-text" style="margin-top: 10px;">Dymatize ISO 100<br>
-                            <strong>2800 ฿</strong>
-                        </p>
-                    </div>
-                </div>
-            </ng-template>
-            <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
-                    <div class="tile-content">
-                        <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
-                            <img src="assets/PNG/optigold.png" class="tile-image" />
-                        </div>
-                        <p class="tile-text" style="margin-top: 10px;">Optimum Nutrition Gold<br>
-                            <strong>2800 ฿</strong>
-                        </p>
-                    </div>
-                </div>
-            </ng-template>
-            <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
-                    <div class="tile-content">
-                        <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
-                            <img src="assets/PNG/scitec.png" class="tile-image" />
-                        </div>
-                        <p class="tile-text" style="margin-top: 10px;">Scitec Nutrition 100% Whey<br>
-                            <strong>2800 ฿</strong>
-                        </p>
-                    </div>
-                </div>
-            </ng-template>
-        </p-splitter>
-
+        
     </div>
     <div class="background-156">
         <div class="content">
