--- a/src/app/recommend-food/recommend-food.component.html
+++ b/src/app/recommend-food/recommend-food.component.html
@@ -1,4 +1,9 @@
 <div class="grid container h-screen">
+
+    <div class="col-12">
+        <div><app-menu [name]="name"></app-menu></div>
+      </div>
+    
     <div class="col-12">
         <div class="content item-center center text-white">
             <h2>อาหารเสริม</h2>
@@ -70,37 +75,37 @@
 
         <p-splitter [panelSizes]="[33, 33, 33]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
-                    <div class="tile-content">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                    <div class="tile-content" >
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/megamass.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Mega Mass Pro 1350<br>
-                            <strong>2800 ฿</strong>
+                            <strong>1500 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/supermass.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Super Mass Gainer<br>
-                            <strong>2800 ฿</strong>
+                            <strong>2600 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-              <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+              <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                 <div class="tile-content">
                     <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                         <img src="assets/PNG/gainfast.png" class="tile-image" />
                     </div>
                     <p class="tile-text" style="margin-top: 10px;">Gain<br> Fast<br>
-                        <strong>2800 ฿</strong>
+                        <strong>2500 ฿</strong>
                     </p>
                 </div>
             </div>
@@ -109,25 +114,25 @@
 
         <p-splitter [panelSizes]="[50, 50]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/baammass.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">BAAM!! Mass<br>
-                            <strong>2800 ฿</strong>
+                            <strong>2600 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/elitemass.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Elite Mass<br>
-                            <strong>2800 ฿</strong>
+                            <strong>2550 ฿</strong>
                         </p>
                     </div>
                 </div>
@@ -144,37 +149,37 @@
 
         <p-splitter [panelSizes]="[33, 33, 33]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/dymatize.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Dymatize ISO 100<br>
-                            <strong>2800 ฿</strong>
+                            <strong>2600 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/optigold.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Optimum Nutrition Gold<br>
-                            <strong>2800 ฿</strong>
+                            <strong>1900 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/scitec.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Scitec Nutrition 100% Whey<br>
-                            <strong>2800 ฿</strong>
+                            <strong>1400 ฿</strong>
                         </p>
                     </div>
                 </div>
@@ -183,25 +188,25 @@
 
         <p-splitter [panelSizes]="[50, 50]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/bpisports.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">BPI Sports<br> Best Protein<br>
-                            <strong>2800 ฿</strong>
+                            <strong>2650 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/baamiso.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">BAAM!! ISO<br> ABSOLUTE ZERO<br>
-                            <strong>2800 ฿</strong>
+                            <strong>3000 ฿</strong>
                         </p>
                     </div>
                 </div>
@@ -218,37 +223,37 @@
 
         <p-splitter [panelSizes]="[33, 33, 33]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/bsnsyntha.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">BSN<br> Syntha-6<br>
-                            <strong>2800 ฿</strong>
+                            <strong>3000 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()"  style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/myprotein.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">MyProtein Impact<br>
-                            <strong>2800 ฿</strong>
+                            <strong>2600 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/cellucor.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Cellucor<br> Whey<br>
-                            <strong>2800 ฿</strong>
+                            <strong>1600 ฿</strong>
                         </p>
                     </div>
                 </div>
@@ -257,25 +262,25 @@
 
         <p-splitter [panelSizes]="[50, 50]" [style]="{ height: '300px', border: 'none' }" styleClass="mb-5" [gutterSize]="0">
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/eas100.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">EAS 100% Whey Protein<br>
-                            <strong>2800 ฿</strong>
+                            <strong>1300 ฿</strong>
                         </p>
                     </div>
                 </div>
             </ng-template>
             <ng-template pTemplate>
-                <div style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+                <div (click)="goproduct()" style="display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
                     <div class="tile-content">
                         <div style="border: 2px solid black; padding: 5px; border-radius: 8px;">
                             <img src="assets/PNG/vegasport.png" class="tile-image" />
                         </div>
                         <p class="tile-text" style="margin-top: 10px;">Vega Sport Premium Protein<br>
-                            <strong>2800 ฿</strong>
+                            <strong>3400 ฿</strong>
                         </p>
                     </div>
                 </div>
