--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -36,10 +36,14 @@
                 <button (click)="incrementQuantity()">+</button>
                 <span>ชิ้น</span>
                 </div>
-            
-                <div class="buttons">
-                <button class="cart-button">ลงตะกร้า</button>
-                <button class="buy-now-button">ซื้อสินค้า</button>
+
+                <div class="margin margin-top-30px">
+                    <div class="item-center text-center">
+                      <p-button
+                        label="ซื้อสินค้า"
+                        styleClass="custom-button-blue-login"
+                      ></p-button>
+                    </div>
                 </div>
             </div>      
         </div>              
