--- a/src/styles.scss
+++ b/src/styles.scss
@@ -906,9 +906,46 @@ strong {
 .buy-now-button {
   background-color: #00cec9;
   border: 1px solid black;
-  color: white;
+  color: black;
   padding: 8px 16px;
   cursor: pointer;
   border-radius: 4px;
   width: 100%;
 }
+
+.payment-button {
+  background-color: #00cec9;
+  border: 1px solid black;
+  color: black;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 12px;
+  width: 100px;
+}
+
+.back-button {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  padding: 8px 16px;
+  font-weight: bold;
+  color: black;
+  cursor: pointer;
+}
+
+.circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border: 2px solid black;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.circle i {
+  font-size: 14px;
+}
+
